--- a/tenant-dashboard/package.json
+++ b/tenant-dashboard/package.json
@@ -10,11 +10,12 @@
   "author": "",
   "license": "ISC",
   "type": "commonjs",
-  "dependencies": {
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "mongoose": "^8.16.4",
-    "node-cron": "^4.2.1",
-    "puppeteer-core": "^24.15.0"
+    "dependencies": {
+    "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.4.1",
+    "node-cron": "^3.0.3",
+    "puppeteer": "^22.10.0"
   }
 }
